[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jwt_pydantic"
description = "Verify JWT claims using the powerful features of Pydantic."
version = "0.0.4"
authors = [{name = "Adam Powis"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7.2"
dependencies = [
    "httpx",
    "fastapi",
    "pydantic",
    "python-jose",
]

[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pylint",
    "types-python-jose==3.3.4",
]
