[build-system]
requires = ["setuptools >= 65.5.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jwt_pydantic"
description = "Verify JWT claims using the powerful features of Pydantic."
version = "0.0.5"
authors = [{name = "Adam Powis"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8.0"
dependencies = [
    "httpx",
    "fastapi",
    "pydantic",
    "python-jose",
]

[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "pylint",
    "types-python-jose==3.3.4",
]

[tool.setuptools.packages.find]
where = ["jwt_pydantic"]
